<resources>
    <string name="app_name">Shaky Notes</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_note">Note</string>
    <string name="add_title">Add Title</string>
    <string name="start_note">Start Note</string>
    <string name="add_note">Add Note</string>
    <string name="delete_note">delete note</string>
    <string name="add_alarm">Add Alarm</string>
    <string name="select_color">select color</string>
    <string name="close_note">close note</string>
    <string name="previous">previous</string>
    <string name="next">next</string>
    <string name="title_activity_splash">Shaky Notes</string>

    <string name="hello_world">Hello world!</string>
    <string name="launch_note">Shake It, Note It</string>
    <string name="settings">Settings</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="done">Done</string>
    <string name="launching_icon">launching icon</string>
</resources>
