<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/note_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/box_5"
    android:transitionName="selected_button"
    tools:context="innovate.jain.com.shakynote.activity.NoteActivity">

    <ImageView
        android:id="@+id/add"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:contentDescription="@string/add_note"
        android:focusable="true"
        android:padding="10dp"
        android:src="@drawable/ic_add"
        android:tint="@color/button_control_color" />

    <innovate.jain.com.shakynote.font.RobottoBoldEditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:layout_toLeftOf="@+id/delete"
        android:layout_toRightOf="@+id/add"
        android:background="#00000000"
        android:gravity="center_horizontal"
        android:hint="@string/add_title"
        android:inputType="textCapSentences"
        android:maxLength="15"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textStyle="bold|italic" />

    <ImageView
        android:id="@+id/delete"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentRight="true"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:contentDescription="@string/close_note"
        android:focusable="true"
        android:padding="10dp"
        android:src="@drawable/ic_clear"
        android:tint="@color/button_control_color" />


    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/title"
        android:background="@color/button_control_color" />

    <RelativeLayout
        android:id="@+id/description_container"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_below="@id/divider">

        <LinearLayout
            android:id="@+id/type_specifier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="horizontal"
            android:visibility="gone">

            <LinearLayout
                android:id="@+id/written_note_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:padding="20dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_create"
                    android:tint="@color/button_control_color" />

                <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="Written Note"
                    android:textColor="@color/button_control_color"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/voice_note_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:padding="20dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_mic_48dp"
                    android:tint="@color/button_control_color" />

                <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="Voice Note"
                    android:textColor="@color/button_control_color"
                    android:textSize="18sp" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/recording_existed_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="horizontal"
            android:visibility="gone">

            <LinearLayout
                android:id="@+id/record_again"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:padding="20dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_mic_48dp"
                    android:tint="@color/button_control_color" />

                <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="Record Again"
                    android:textColor="@color/button_control_color"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/play_existing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/play_existing_image"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:padding="20dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_play_circle"
                    android:tint="@color/button_control_color" />

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="Play Recording"
                    android:textColor="@color/button_control_color"
                    android:textSize="18sp" />

            </LinearLayout>
        </LinearLayout>

        <innovate.jain.com.shakynote.font.RobottoRegularEditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="#00000000"
            android:gravity="top"
            android:hint="@string/start_note"
            android:inputType="textCapSentences|textMultiLine"
            android:lines="20"
            android:singleLine="false"
            android:textColor="#000000"
            android:textColorHint="#000000" />

        <RelativeLayout
            android:id="@+id/media_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <innovate.jain.com.shakynote.font.CustomTextView
                android:id="@+id/voice_timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="10dp"
                android:text="00:00:00"
                android:textColor="@color/button_control_color"
                android:textSize="70dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/voice_timer"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/record_stop"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:padding="5dp"
                    android:src="@drawable/ic_mic"
                    android:tint="@color/button_control_color" />

                <ImageView
                    android:id="@+id/stop"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:padding="5dp"
                    android:src="@drawable/ic_stop"
                    android:tint="@color/button_control_color" />

            </LinearLayout>
        </RelativeLayout>

    </RelativeLayout>


    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_below="@+id/description_container"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/add_alarm"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_margin="2dp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:contentDescription="@string/add_alarm"
            android:focusable="true"
            android:padding="5dp"
            android:src="@drawable/ic_alarm"
            android:tint="@color/button_control_color" />

        <ImageView
            android:id="@+id/select_color"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_margin="2dp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:contentDescription="@string/select_color"
            android:focusable="true"
            android:padding="5dp"
            android:src="@drawable/ic_select_color"
            android:tint="@color/button_control_color" />

        <ImageView
            android:id="@+id/share"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_margin="2dp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:contentDescription="@string/select_color"
            android:focusable="true"
            android:padding="5dp"
            android:src="@drawable/ic_share"
            android:tint="@color/button_control_color" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/description_container">

        <LinearLayout
            android:id="@+id/navigation_buttons"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/left"
                android:layout_width="30dp"
                android:layout_height="35dp"
                android:layout_gravity="center_vertical"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:contentDescription="@string/previous"
                android:focusable="true"
                android:padding="3dp"
                android:src="@drawable/left"
                android:tint="@color/button_control_color" />

            <innovate.jain.com.shakynote.font.RobottoRegularTextView
                android:id="@+id/date_created"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:textColor="@color/button_control_color"
                android:textSize="17sp" />

            <ImageView
                android:id="@+id/right"
                android:layout_width="30dp"
                android:layout_height="35dp"
                android:layout_gravity="center_vertical"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:contentDescription="@string/next"
                android:focusable="true"
                android:padding="3dp"
                android:src="@drawable/right"
                android:tint="@color/button_control_color" />

        </LinearLayout>

        <ImageView
            android:id="@+id/options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/navigation_buttons"
            android:layout_marginRight="3dp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:contentDescription="@string/next"
            android:focusable="true"
            android:padding="7dp"
            android:src="@drawable/ic_options"
            android:tint="@color/button_control_color" />
    </RelativeLayout>


</RelativeLayout>
